Update to 1.20.4
Should be backwards-compatible.