@@ -2,10 +2,11 @@ package com.github.jikoo.planarwrappers.config.impl;
 
 import com.github.jikoo.planarwrappers.config.KeyedSetSetting;
 import com.github.jikoo.planarwrappers.util.StringConverters;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Set;
 import org.bukkit.Material;
+import org.bukkit.Tag;
 import org.bukkit.configuration.ConfigurationSection;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -27,7 +28,7 @@ public class MaterialSetSetting extends KeyedSetSetting<Material> {
 
   @Override
   protected @NotNull Collection<String> getTagRegistries() {
-    return Arrays.asList("items", "blocks");
+    return List.of(Tag.REGISTRY_ITEMS, Tag.REGISTRY_BLOCKS);
   }
 
   @Override
